--- a/src/app/components/linechart/linechart.component.html
+++ b/src/app/components/linechart/linechart.component.html
@@ -1,9 +1,4 @@
-<div style="display: block;">
-    <!-- <canvas
-      baseChart
-      [data]="lineChartData"
-      [options]="lineChartOptions"
-      [type]="lineChartType">
-    </canvas> -->
-  </div>
-  
+<div style="display: block;" >
+  <canvas baseChart [data]="lineChartData" [options]="lineChartOptions" [type]="lineChartType">
+  </canvas>
+</div>
