refactoring of code to make the application responsive and make it more efficient

--- a/src/app/components/piechart/piechart.component.html
+++ b/src/app/components/piechart/piechart.component.html
@@ -1,5 +1,5 @@
-<div class="row m-0 p-0 justify-content-center gy-2">
-    <div class="col-4">
+<div class="row mx-auto my-5 px-0 justify-content-center gy-3">
+    <div class="col-12 col-md-6 col-lg-5">
         <canvas baseChart [data]="pieChartData" [type]="pieChartType" [options]="pieChartOptions">
         </canvas>
     </div>
