--- a/src/app/components/stat-box/stat-box.component.html
+++ b/src/app/components/stat-box/stat-box.component.html
@@ -1,8 +1,4 @@
-<div class="row m-0 p-0 statBox rounded">
-    <div class="col-12 text-center text-gray">
-        {{title}}
-    </div>
-    <div class="col-12 text-center fw-bold">
-        {{countElement}}
-    </div>
+<div class="row m-auto p-0 statBox rounded justify-content-center align-items-center text-center w-100 h-100" style="max-width: 200px; height: 80px">
+        <p class="w-100 text-wrap text-gray mb-0">   {{title}} </p>
+        <p class="w-100 text-wrap fw-bold mt-auto"> {{countElement}} </p>
 </div>
