--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,5 +1,5 @@
-<div class="row m-0 p-0 justify-content-center g-2">
+<div class="row m-auto p-0 justify-content-center g-2">
     <div class="col-3 text-center customTitle rounded">
-        <h3>{{title}}</h3>
+        <h3 classe="w-100 text-wrap"> {{title}}</h3>
     </div>
 </div>
