--- a/src/app/components/linechart/linechart.component.html
+++ b/src/app/components/linechart/linechart.component.html
@@ -1,4 +1,4 @@
-<div style="display: block;" >
+<div class="container d-flex justify-content-center align-items-center m-auto" style="max-width: 800px; height: 400px;">
   <canvas baseChart [data]="lineChartData" [options]="lineChartOptions" [type]="lineChartType">
   </canvas>
 </div>
