--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,14 +1,16 @@
+<div class="dashboard-container">
 <app-header [title]="titleDashboard"> </app-header>
 <div class="row m-0 p-0 justify-content-center gx-5 gy-2">
     <div class="col-6 col-md-2">
-        <app-stat-box [title]="'Number of JOs'" [countElement]="sumJo"></app-stat-box>
+        <app-stat-box [title]="'Number of JOs'" [countElement]="(sumJo$ | async) ?? 0"></app-stat-box>
     </div>
     <div class="col-6 col-md-2">
-        <app-stat-box [title]="'Number of countries'" [countElement]="sumCountry"></app-stat-box>
+        <app-stat-box [title]="'Number of countries'" [countElement]="(sumCountry$ | async) ?? 0"></app-stat-box>
     </div>
 </div>
 <div class="row m-0 p-0">
     <div class="col-12"> 
-        <app-piechart [data]="olympics"></app-piechart>
+        <app-piechart [data]="(olympics$ | async) ?? []"></app-piechart>
     </div>
+</div>
 </div>
