--- a/src/app/pages/details/details.component.html
+++ b/src/app/pages/details/details.component.html
@@ -1,16 +1,16 @@
-<button class="btn btn-sm btn-primary" (click)="back()">
-    <i class="fa-solid fa-backward"></i>
-</button>
+<div class="details-container">
+     <button class="btn btn-sm btn-primary" (click)="back()">
+    <i class="fa-solid fa-backward"></i> BACK </button> </div>
 <app-header [title]="titleDetails"> </app-header>
 <div class="row m-0 p-0 gy-2 justify-content-center">
     <div class="col-4 col-md-3">
-        <app-stat-box [title]="'Number of entries'" [countElement]="numberOfEntries"></app-stat-box>
+        <app-stat-box [title]="'Number of entries'" [countElement]="(numberOfEntries$ | async) ?? 0"></app-stat-box>
     </div>
     <div class="col-4 col-md-3">
-        <app-stat-box [title]="'Total number medals'" [countElement]="totalMedals"></app-stat-box>
+        <app-stat-box [title]="'Total number medals'" [countElement]="(totalMedals$ | async) ?? 0"></app-stat-box>
     </div>
     <div class="col-4 col-md-3">
-        <app-stat-box [title]="'Total number of athletes'" [countElement]="totalAthletesCount"></app-stat-box>
+        <app-stat-box [title]="'Total number of athletes'" [countElement]="(totalAthletesCount$ | async) ?? 0"></app-stat-box>
     </div>
 </div>
 <div class="row m-0 p-0 gy-2 col-12 justify-content-center">
@@ -18,3 +18,4 @@
         <app-linechart [selectedCountryId]="selectedCountryId"></app-linechart>
     </div>
 </div>
+
